# arkadasozelegitim

./: .env.reference  .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  SETUP_NEXTCLOUD.md  package-lock.json  package.json  setup_arch.sh  setup_project.sh  setup_ubuntu.sh  setup_windows.ps1  yapilacaklar.txt
.github/workflows/: build.yml
ai-service/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
ai-service/app/: main.py
arkadasstrapi/: package-lock.json  package.json
arkadasstrapi/config/: cors.ts  (+1 more)
arkadasweb/: App.staticwebsite.tsx  App.tsx  index.html  next.config.mjs  package-lock.json  package.json  robots.txt  sitemap.xml  tailwind.config.js  tsconfig.json
docs/: changelog.md  deployment.md  mkdocs.yml  security-audit.md  user-manual.md
infrastructure/: configure_docker_socket.sh  docker-compose.yml  fix_docker_group.sh  schema.sql  setup_arch.sh
mebbis-service/: .env.example  package-lock.json  package.json
mobile/: babel.config.js  jest.config.js  package-lock.json  package.json
scripts/: database-indexes.sql  run-tests.ps1  run-tests.sh
src/: index.css
strapi/: .env.example  package-lock.json  package.json
web/: .env.example  .gitignore  build-log.txt  build-log2.txt  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  playwright.config.ts  share-test.cjs  tailwind.config.js  test-webdav-props.ts  tsconfig.json  upload-simple.cjs  vitest.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs  main.rs
(+298 files in other folders)
