[package]
name = "arkadas-desktop"
version = "1.0.0"
description = "Arkadaş Özel Eğitim ERP - Desktop Application"
authors = ["Arkadaş Özel Eğitim <info@arkadasozelegitim.com>"]
license = "Proprietary"
repository = "https://github.com/arkadasozelegitim/arkadas"
homepage = "https://arkadasozelegitim.com"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "arkadas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [
    "tray-icon",
    "image-ico",
    "image-png"
] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
